--- a/inst/www/index.html
+++ b/inst/www/index.html
@@ -21,15 +21,15 @@
       <form>
         <div class="form-group">
           <label>Title</label>
-          <input type="text" class="form-control" id="mytitle" value="The birthplace of R">
+          <input type="text" class="form-control" id="mytitle" value="Christchurch">
         </div>
         <div class="form-group">
           <label>Latitude</label>
-          <input type="number" class="form-control" id="mylat" value="-36.852">
+          <input type="number" class="form-control" id="mylat" value="-43.5321">
         </div>
         <div class="form-group">
           <label>Longitude</label>
-          <input type="number" class="form-control" id="mylng" value="174.768">
+          <input type="number" class="form-control" id="mylng" value="172.6362">
         </div>
         <button type="submit" id="mapsubmit" class="btn btn-default">Update Map!</button>
       </form>
